log
Mon 10 Apr 2023 02:34:31 PM UTC: 
 tests:  0|6
total_score: 0/70
60c9fd5
Mon 10 Apr 2023 02:41:30 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
5fead23
Mon 10 Apr 2023 02:43:17 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
c8b6dc5
Mon 10 Apr 2023 02:44:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
f2a84ed
Mon 10 Apr 2023 02:44:55 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
4661026
Fri 12 May 2023 02:19:11 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
648c107
Fri 12 May 2023 02:20:00 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
29e21a0
Fri 12 May 2023 02:43:45 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:56: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   44 |   while(map->buckets[posicion] != NULL && map->buckets[pos]->key != NULL){
      |                                                        ^~~
      |                                                        pow
hashmap.c:44:56: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f9aa341
Fri 12 May 2023 02:43:54 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
0813217
Fri 12 May 2023 02:48:03 PM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
4bd0c11
Fri 12 May 2023 02:53:12 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
8d91919
Fri 12 May 2023 02:56:21 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
46bc44f
Fri 12 May 2023 03:02:03 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
2a99b3a
Fri 12 May 2023 03:05:48 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:60:11: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   60 |   Pair ** nuevo = calloc(sizeof(Pair *) , map->capacity);
      |           ^~~~~
hashmap.c:58:11: error: unused variable ‘old_buckets’ [-Werror=unused-variable]
   58 |   Pair ** old_buckets = map -> buckets;
      |           ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
874d71a
Fri 12 May 2023 03:07:51 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:62:34: error: ‘*old_buckets’ is a pointer; did you mean to use ‘->’?
   62 |   for (int i = 0; i < old_buckets->capacity; i++) {
      |                                  ^~
      |                                  ->
Compilation failed
d40ebba
Fri 12 May 2023 03:08:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
f5334c1
